dialog z-index bug fix

--- a/resources/js/assets/scss/customFix.scss
+++ b/resources/js/assets/scss/customFix.scss
@@ -1,12 +1,9 @@
 .md-menu-content {
     max-width: 400px;
     max-height: 40vh;
-    .md-select-menu {
-        z-index: 99999;
-    }
 }
 .md-dialog {
-    z-index: 99999;
+    z-index: 9999;
 }
 .sidebar .sidebar-wrapper .md-list li ul.nav {
     padding-right: 30px;
